--- a/openerp6/.settings/org.eclipse.core.resources.prefs
+++ b/openerp6/.settings/org.eclipse.core.resources.prefs
@@ -1,9 +1,10 @@
-#Tue Aug 23 16:04:11 CEST 2011
+#Tue Aug 30 13:20:02 CEST 2011
 eclipse.preferences.version=1
 encoding//client/bin/modules/gui/main.py=utf-8
 encoding//server/doc/migrate/3.3.0-3.4.0/post.py=utf-8
 encoding//server/openerp-server.py=utf-8
 encoding//server/openerp/addons/account/account.py=utf-8
+encoding//server/openerp/addons/account/account_bank.py=utf-8
 encoding//server/openerp/addons/account/account_bank_statement.py=utf-8
 encoding//server/openerp/addons/account/account_move_line.py=utf-8
 encoding//server/openerp/addons/account/company.py=utf-8
@@ -22,9 +23,17 @@ encoding//server/openerp/addons/account_coda/__openerp__.py=utf-8
 encoding//server/openerp/addons/account_coda/account_coda.py=utf-8
 encoding//server/openerp/addons/account_coda/wizard/account_coda_import.py=utf-8
 encoding//server/openerp/addons/audittrail/audittrail.py=utf-8
+encoding//server/openerp/addons/base/res/__init__.py=utf-8
+encoding//server/openerp/addons/base/res/bank.py=utf-8
+encoding//server/openerp/addons/base/res/partner/__init__.py=utf-8
+encoding//server/openerp/addons/base/res/partner/bank.py=utf-8
+encoding//server/openerp/addons/base/res/partner/crm.py=utf-8
 encoding//server/openerp/addons/base/res/partner/partner.py=utf-8
+encoding//server/openerp/addons/base/res/res_company.py=utf-8
 encoding//server/openerp/addons/base_iban/__openerp__.py=utf-8
 encoding//server/openerp/addons/base_iban/base_iban.py=utf-8
+encoding//server/openerp/addons/base_synchro/__openerp__.py=utf-8
+encoding//server/openerp/addons/base_tools/__openerp__.py=utf-8
 encoding//server/openerp/addons/base_vat/base_vat.py=utf-8
 encoding//server/openerp/addons/caldav/calendar.py=utf-8
 encoding//server/openerp/addons/crm_profiling/crm_profiling.py=utf-8
@@ -41,11 +50,13 @@ encoding//server/openerp/addons/l10n_be/wizard/l10n_be_vat_intra.py=utf-8
 encoding//server/openerp/addons/l10n_ch/report/report_webkit_html.py=utf-8
 encoding//server/openerp/addons/l10n_gr/__init__.py=utf-8
 encoding//server/openerp/addons/l10n_gr/__openerp__.py=utf-8
+encoding//server/openerp/addons/l10n_lu/wizard/pdf_ext.py=utf-8
 encoding//server/openerp/addons/l10n_nl/__init__.py=utf-8
 encoding//server/openerp/addons/l10n_nl/__openerp__.py=utf-8
 encoding//server/openerp/addons/l10n_syscohada/__init__.py=utf-8
 encoding//server/openerp/addons/mrp/mrp.py=utf-8
 encoding//server/openerp/addons/project_long_term/project_long_term.py=utf-8
+encoding//server/openerp/addons/project_planning/project_planning.py=utf-8
 encoding//server/openerp/addons/report_webkit/__init__.py=utf-8
 encoding//server/openerp/addons/report_webkit/webkit_report.py=utf-8
 encoding//server/openerp/addons/survey/survey.py=utf-8
@@ -68,10 +79,15 @@ encoding//server/openerp/addons_l10n_hr/l10n_hr_base/__init__.py=utf-8
 encoding//server/openerp/addons_l10n_hr/l10n_hr_base/__openerp__.py=utf-8
 encoding//server/openerp/addons_l10n_hr/l10n_hr_base/base_vat.py=utf-8
 encoding//server/openerp/addons_l10n_hr/l10n_hr_base/company.py=utf-8
+encoding//server/openerp/addons_l10n_hr/l10n_hr_base/l10n_hr_base.py=utf-8
 encoding//server/openerp/addons_l10n_hr/l10n_hr_base/partner.py=utf-8
 encoding//server/openerp/addons_l10n_hr/landed_cost/__init__.py=utf-8
 encoding//server/openerp/addons_l10n_hr/landed_cost/__openerp__.py=utf-8
+encoding//server/openerp/addons_other/account_account_extension_o4sb/account_extension.py=utf-8
+encoding//server/openerp/addons_other/account_account_extension_o4sb/report/o4sb_fin_report_helper.py=utf-8
 encoding//server/openerp/addons_other/account_account_extension_o4sb/wizard/account_extension_wizard.py=utf-8
+encoding//server/openerp/addons_other/account_chart_orthogonal/__terp__.py=utf-8
+encoding//server/openerp/addons_other/account_chart_orthogonal/account_chart.py=utf-8
 encoding//server/openerp/addons_other/account_financial_report/__openerp__.py=utf-8
 encoding//server/openerp/addons_other/account_financial_report/account_move.py=utf-8
 encoding//server/openerp/addons_other/account_financial_report/report/account_balance.py=utf-8
@@ -90,6 +106,7 @@ encoding//server/openerp/addons_other/hotel/hotel.py=utf-8
 encoding//server/openerp/addons_other/hotel_restaurant/hotel_restaurant.py=utf-8
 encoding//server/openerp/addons_other/product_variant_multi/product_variant.py=utf-8
 encoding//server/openerp/addons_other/pxgo_account_admin_tools/set_partner_in_moves.py=utf-8
+encoding//server/openerp/addons_other/pxgo_cash_statement/cash_statement.py=utf-8
 encoding//server/openerp/addons_other/report_aeroo_sample/report/lorem.py=utf8
 encoding//server/openerp/addons_other/training/partner.py=utf-8
 encoding//server/openerp/addons_other/training/training.py=utf-8
